Changed variables 'listItem' to 'item' and 'cartTotal' to totalPriceText' for better readability. Added new properties item, price, and quantity to each list item for dynamic updating. Reorganized code for better structure and flow. Removed repetitive addEventListener()s from individual buttons to avoid listening for two events. Added quantity decreasing and increasing functionality.

--- a/styles.css
+++ b/styles.css
@@ -37,14 +37,14 @@ li{
     margin-top: 0.5rem;
     list-style: none;
 }
-.purchased{
+.increase{
     background-color: rgb(37, 48, 143);
 }
 
-.purchased.true{
+/* .purchased.true{
     background-color: green;
     color: white;
-}
+} */
 button{
     border-radius: 50px;
     padding: 5px 10px;
@@ -55,7 +55,7 @@ button{
 #addItemBtn{
     background: linear-gradient(rgb(48, 64, 202), rgb(122, 195, 255));
 }
-.deleteBtn{
+.decrease{
     background: linear-gradient(rgb(202, 48, 48), rgb(119, 11, 11))
 }
 input{
